samples/_failures_safe/1761604320_240010_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b5171ef.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4b5171ef.c:152:32: error: expected ‘;’ at end of input
  152 |             tokens[token_count]
      |                                ^
      |                                ;
./samples/SAFE/__tmp_4b5171ef.c:152:13: error: expected declaration or statement at end of input
  152 |             tokens[token_count]
      |             ^~~~~~
./samples/SAFE/__tmp_4b5171ef.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b5171ef.c:152:13: error: expected declaration or statement at end of input
